# finance_manager

./: CMakeLists.txt  README.md  financemanager.cpp  financemanager.h  loginwindow.cpp  loginwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  project_structure  transaction.h  transactiondialog.cpp  transactiondialog.h  transactionmanager.cpp  transactionmanager.h  transactiontablemodel.cpp  transactiontablemodel.h
Finance_Manager/: CMakeLists.txt  main.cpp
Finance_Manager/include/: CategoryDialog.h  DatabaseManager.h  LoginWindow.h  MainWindow.h  ReportWindow.h  SettingsDialog.h  TransactionDialog.h  UserManager.h
Finance_Manager/include/Models/: Budget.h  Category.h  Transaction.h  User.h
Finance_Manager/resources/: resources.qrc
Finance_Manager/src/: CategoryDialog.cpp  DatabaseManager.cpp  LoginWindow.cpp  MainWindow.cpp  ReportWindow.cpp  SettingsDialog.cpp  TransactionDialog.cpp  UserManager.cpp
Finance_Manager/src/Models/: Budget.cpp  Category.cpp  Transaction.cpp  User.cpp
Finance_Manager/ui/: CategoryDialog.ui  LoginWindow.ui  MainWindow.ui  ReportWindow.ui  SettingsDialog.ui  TransactionDialog.ui
